@@ -13,6 +13,7 @@ Version 0.7.0~dev
 	* Support demuxing of DNxHD essences in ffmpeg worker.
 	* Read fps value from ffmpeg output.
 	* Support BMX muxer.
+	* Handle interlaced option in XDCAMHD transcoding profile.
 
 Version 0.6.0 Released on 2012/08/06
 
